# hjson-cpp

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: hjson-config-version.cmake.in  hjson-config.cmake.in  msvc_crt.cmake
include/hjson/: hjson.h
performance/: CMakeLists.txt  perf.cpp  perf_multithread.cpp
src/: CMakeLists.txt  hjson_decode.cpp  hjson_encode.cpp  hjson_parsenumber.cpp  hjson_value.cpp
test/: CMakeLists.txt  hjson_test.h  test.cpp  test_marshal.cpp  test_value.cpp
test/assets/: charset2_result.json  comments5_result.hjson  comments7_result.hjson  comments_result.hjson  comments_result.json  kan_result.hjson  kan_result.json  pass1_result.hjson  pass1_result.json  pass5_result.hjson  strings3_result.hjson  strings3_result.json  strings5_test.hjson  strings_result.hjson  strings_result.json  testlist.txt  windowseol_result.hjson  windowseol_result.json
test/assets/comments/: comments5_result.hjson  comments7_result.hjson  comments_result.hjson  kan_result.hjson  keys_result.hjson  pass1_result.hjson  pass6_result.hjson  root_result.hjson  stringify1_result.hjson  strings2_result.hjson  strings5_result.hjson  strings_result.hjson  trail_result.hjson
test/assets/comments2/: comments3_result.hjson  comments7_result.hjson  kan_result.hjson  pass1_result.hjson  pass3_result.hjson  root_result.hjson  stringify1_result.hjson  strings2_result.hjson  strings6_result.hjson  strings_result.hjson
test/assets/comments3/: comments7_result.hjson  kan_result.hjson  pass1_result.hjson  pass6_result.hjson  strings_result.hjson
test/assets/sorted/: charset2_result.json  comments5_result.hjson  comments5_result.json  comments7_result.hjson  comments_result.hjson  comments_result.json  int64_result.json  kan_result.hjson  kan_result.json  pass1_result.hjson  pass1_result.json  pass3_result.hjson  pass5_result.json  stringify1_result.hjson  strings2_result.hjson  strings_result.hjson  strings_result.json  windowseol_result.hjson  windowseol_result.json
